--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,7 @@ body{
     display: inline;
     float: right;
     font-size: 18px;
+    z-index: 9999;
   }
 
   .nav > .nav-links > a {
